--- a/src/main/resources/br/edu/poo/gui/cadastroCliente.fxml
+++ b/src/main/resources/br/edu/poo/gui/cadastroCliente.fxml
@@ -2,52 +2,53 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<TitledPane animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="464.0" prefWidth="600.0" text="CADASTRO CLIENTE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19">
-  <content>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+<Pane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="640.0">
          <children>
-            <Text layoutX="164.0" layoutY="33.0" stroke="#d64747" strokeType="OUTSIDE" strokeWidth="0.0" text="MENU DE CADASTRO DE CLIENTE" textAlignment="CENTER" underline="true">
+            <Text layoutX="185.0" layoutY="60.0" stroke="#d64747" strokeType="OUTSIDE" strokeWidth="0.0" text="MENU DE CADASTRO DE CLIENTE" textAlignment="CENTER" underline="true">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Button layoutX="314.0" layoutY="374.0" mnemonicParsing="false" text="Cadastrar" />
-            <TextField layoutX="225.0" layoutY="144.0" />
-            <TextField layoutX="225.0" layoutY="107.0" />
-            <Text layoutX="196.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPF">
+            <Text layoutX="48.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPF:">
                <font>
                   <Font size="13.0" />
                </font>
             </Text>
-            <Text layoutX="177.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NOME">
+            <TextField layoutX="47.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
+            <Text layoutX="247.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NOME:">
                <font>
                   <Font size="13.0" />
                </font>
             </Text>
-            <TextField layoutX="225.0" layoutY="187.0" />
-            <Text layoutX="156.0" layoutY="245.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TELEFONE">
+            <TextField layoutX="247.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
+            <Text layoutX="450.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ENDEREÇO:" wrappingWidth="74.0">
                <font>
                   <Font size="13.0" />
                </font>
             </Text>
-            <TextField layoutX="225.0" layoutY="229.0" />
-            <Text layoutX="153.0" layoutY="203.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ENDEREÇO">
+            <TextField layoutX="450.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
+            <Text layoutX="46.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TELEFONE:" wrappingWidth="110.0">
                <font>
                   <Font size="13.0" />
                </font>
             </Text>
-            <TextField layoutX="225.0" layoutY="274.0" />
-            <Text layoutX="66.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CARTEIRA DE MOTORISTA">
+            <TextField layoutX="46.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
+            <Text layoutX="247.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CARTEIRA DE MOTORISTA:" wrappingWidth="163.0">
                <font>
                   <Font size="13.0" />
                </font>
             </Text>
-            <Button layoutX="218.0" layoutY="374.0" mnemonicParsing="false" text="Cancelar" />
-         </children></AnchorPane>
-  </content>
-</TitledPane>
+            <TextField layoutX="247.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
+            <Button layoutX="190.0" layoutY="318.0" mnemonicParsing="false" text="Cancelar" />
+            <Button layoutX="387.0" layoutY="318.0" mnemonicParsing="false" text="Cadastrar" />
+         </children>
+      </AnchorPane>
+   </children>
+</Pane>
