--- a/src/main/resources/br/edu/poo/gui/cadastroLocacao.fxml
+++ b/src/main/resources/br/edu/poo/gui/cadastroLocacao.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -11,43 +12,37 @@
    <children>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="640.0">
          <children>
-            <Text layoutX="185.0" layoutY="60.0" stroke="#d64747" strokeType="OUTSIDE" strokeWidth="0.0" text="MENU DE CADASTRO DE CLIENTE" textAlignment="CENTER" underline="true">
+            <Text layoutX="179.0" layoutY="58.0" stroke="#d64747" strokeType="OUTSIDE" strokeWidth="0.0" text="MENU DE CADASTRO DE LOCAÇÃO" textAlignment="CENTER" underline="true">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text layoutX="48.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPF:">
+            <Text layoutX="48.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CLIENTE:">
                <font>
                   <Font size="13.0" />
                </font>
             </Text>
             <TextField layoutX="47.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="247.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NOME:">
+            <Text layoutX="247.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VEÍCULO:">
                <font>
                   <Font size="13.0" />
                </font>
             </Text>
             <TextField layoutX="247.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="450.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ENDEREÇO:" wrappingWidth="74.0">
+            <Text layoutX="450.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DATA DE DEVOLUÇÃO:" wrappingWidth="138.03759765625">
                <font>
                   <Font size="13.0" />
                </font>
             </Text>
             <TextField layoutX="450.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="46.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TELEFONE:" wrappingWidth="110.0">
+            <Text layoutX="247.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SEGURO:" wrappingWidth="74.0">
                <font>
                   <Font size="13.0" />
                </font>
             </Text>
-            <TextField layoutX="46.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="247.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CARTEIRA DE MOTORISTA:" wrappingWidth="163.0">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="247.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
             <Button layoutX="190.0" layoutY="318.0" mnemonicParsing="false" text="Cancelar" />
             <Button layoutX="387.0" layoutY="318.0" mnemonicParsing="false" text="Cadastrar" />
+            <ChoiceBox layoutX="247.0" layoutY="220.0" prefWidth="150.0" />
          </children>
       </AnchorPane>
    </children>
