--- a/src/main/resources/br/edu/poo/gui/cadastroCaminhao.fxml
+++ b/src/main/resources/br/edu/poo/gui/cadastroCaminhao.fxml
@@ -3,58 +3,53 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.poo.gui.ControladorVeiculo">
    <children>
-      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="640.0">
-         <children>
-            <Text layoutX="220.0" layoutY="58.0" stroke="#d64747" strokeType="OUTSIDE" strokeWidth="0.0" text="CADASTRAR CAMINHÃO" textAlignment="CENTER" underline="true">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Text>
-            <Text layoutX="48.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PLACA:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="47.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="247.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MODELO:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="247.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="450.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ANO:" wrappingWidth="41.03759765625">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="450.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="46.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VALOR DA DIÁRIA:" wrappingWidth="110.0">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="46.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="247.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nº EIXOS:" wrappingWidth="74.0">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="247.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="450.0" layoutY="214.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CAPACIDADE DE CARGA:" wrappingWidth="150.0">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="450.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
-            <Button layoutX="190.0" layoutY="318.0" mnemonicParsing="false" text="Cancelar" />
-            <Button layoutX="387.0" layoutY="318.0" mnemonicParsing="false" text="Cadastrar" />
-         </children>
-      </AnchorPane>
+      <Text layoutX="220.0" layoutY="58.0" stroke="#d64747" strokeType="OUTSIDE" strokeWidth="0.0" text="CADASTRAR CAMINHÃO" textAlignment="CENTER" underline="true">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="48.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PLACA:">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="placa_gui" layoutX="47.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="247.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MODELO:">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="modelo_gui" layoutX="247.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="450.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ANO:" wrappingWidth="41.03759765625">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="ano_gui" layoutX="450.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="46.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VALOR DA DIÁRIA:" wrappingWidth="110.0">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="valorDiaria_gui" layoutX="46.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="247.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nº EIXOS:" wrappingWidth="74.0">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="numEixos_gui" layoutX="247.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="450.0" layoutY="214.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CAPACIDADE DE CARGA:" wrappingWidth="150.0">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="capacidadeCarga_gui" layoutX="450.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
+      <Button layoutX="190.0" layoutY="318.0" mnemonicParsing="false" text="Cancelar" />
+      <Button fx:id="btn_cadastrar" layoutX="387.0" layoutY="318.0" mnemonicParsing="false" onAction="#addCaminhao" text="Cadastrar" />
    </children>
-</Pane>
+</AnchorPane>
