--- a/src/main/resources/br/edu/poo/gui/cadastroCarro.fxml
+++ b/src/main/resources/br/edu/poo/gui/cadastroCarro.fxml
@@ -1,60 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.poo.gui.ControladorVeiculo">
    <children>
-      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="640.0">
-         <children>
-            <Text layoutX="239.0" layoutY="59.0" stroke="#d64747" strokeType="OUTSIDE" strokeWidth="0.0" text="CADASTRAR CARRO" textAlignment="CENTER" underline="true">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Text>
-            <Text layoutX="48.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PLACA:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="47.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="247.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MODELO:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="247.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="450.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ANO:" wrappingWidth="41.03759765625">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="450.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="46.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VALOR DA DIÁRIA:" wrappingWidth="110.0">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="46.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="247.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nº PORTAS:" wrappingWidth="74.0">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="247.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="450.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nº PASSAGEIROS:" wrappingWidth="110.0">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="450.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" />
-            <Button layoutX="190.0" layoutY="318.0" mnemonicParsing="false" text="Cancelar" />
-            <Button layoutX="387.0" layoutY="318.0" mnemonicParsing="false" text="Cadastrar" />
-         </children>
-      </AnchorPane>
+      <Text layoutX="239.0" layoutY="59.0" stroke="#d64747" strokeType="OUTSIDE" strokeWidth="0.0" text="CADASTRAR CARRO" textAlignment="CENTER" underline="true">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="45.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PLACA:">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="placa_gui" layoutX="44.0" layoutY="105.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="244.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MODELO:">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="modelo_gui" layoutX="244.0" layoutY="105.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="447.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ANO:" wrappingWidth="41.03759765625">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="ano_gui" layoutX="447.0" layoutY="105.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="43.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VALOR DA DIÁRIA:" wrappingWidth="110.0">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="valorDiaria_gui" layoutX="43.0" layoutY="187.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="244.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nº PORTAS:" wrappingWidth="74.0">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="numPortas_gui" layoutX="244.0" layoutY="187.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="447.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nº PASSAGEIROS:" wrappingWidth="110.0">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="numPassageiros_gui" layoutX="447.0" layoutY="187.0" prefHeight="25.0" prefWidth="150.0" />
+      <Button layoutX="190.0" layoutY="318.0" mnemonicParsing="false" text="Cancelar" />
+      <Button fx:id="btn_cadastrar" layoutX="387.0" layoutY="318.0" mnemonicParsing="false" onAction="#addCarro" text="Cadastrar" />
+      <Text layoutX="43.0" layoutY="264.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MEDIA KM/L:" wrappingWidth="110.0">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="mediaKm_gui" layoutX="43.0" layoutY="269.0" prefHeight="25.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="arCondicionado_gui" layoutX="244.0" layoutY="269.0" prefWidth="150.0" />
+      <Text layoutX="244.0" layoutY="264.0" strokeType="OUTSIDE" strokeWidth="0.0" text="AR CONDICIONADO:" wrappingWidth="150.0">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
    </children>
-</Pane>
+</AnchorPane>
