--- a/src/main/resources/br/edu/poo/gui/cadastroLocacao.fxml
+++ b/src/main/resources/br/edu/poo/gui/cadastroLocacao.fxml
@@ -4,46 +4,41 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.poo.gui.ControladorLocacao">
    <children>
-      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="640.0">
-         <children>
-            <Text layoutX="179.0" layoutY="58.0" stroke="#d64747" strokeType="OUTSIDE" strokeWidth="0.0" text="MENU DE CADASTRO DE LOCAÇÃO" textAlignment="CENTER" underline="true">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Text>
-            <Text layoutX="48.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CLIENTE:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="47.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="247.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VEÍCULO:">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="247.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="450.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DATA DE DEVOLUÇÃO:" wrappingWidth="138.03759765625">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <TextField layoutX="450.0" layoutY="135.0" prefHeight="25.0" prefWidth="150.0" />
-            <Text layoutX="247.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SEGURO:" wrappingWidth="74.0">
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Text>
-            <Button layoutX="190.0" layoutY="318.0" mnemonicParsing="false" text="Cancelar" />
-            <Button layoutX="387.0" layoutY="318.0" mnemonicParsing="false" text="Cadastrar" />
-            <ChoiceBox layoutX="247.0" layoutY="220.0" prefWidth="150.0" />
-         </children>
-      </AnchorPane>
+      <Text layoutX="179.0" layoutY="58.0" stroke="#d64747" strokeType="OUTSIDE" strokeWidth="0.0" text="MENU DE CADASTRO DE LOCAÇÃO" textAlignment="CENTER" underline="true">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="116.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CLIENTE:">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="cliente_gui" layoutX="115.0" layoutY="133.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="379.0" layoutY="127.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VEÍCULO:">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="veiculo_gui" layoutX="379.0" layoutY="132.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="379.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DATA DE DEVOLUÇÃO:" wrappingWidth="138.03759765625">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <TextField fx:id="dataDevolucao_gui" layoutX="379.0" layoutY="216.0" prefHeight="25.0" prefWidth="150.0" />
+      <Text layoutX="115.0" layoutY="214.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SEGURO:" wrappingWidth="74.0">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Text>
+      <Button layoutX="190.0" layoutY="318.0" mnemonicParsing="false" text="Cancelar" />
+      <Button fx:id="btn_cadastrar" layoutX="387.0" layoutY="318.0" mnemonicParsing="false" onAction="#addLocacao" text="Cadastrar" />
+      <ChoiceBox fx:id="seguro_gui" layoutX="115.0" layoutY="219.0" prefWidth="150.0" />
    </children>
-</Pane>
+</AnchorPane>
