--- a/src/main/resources/br/edu/poo/gui/removerLocacao.fxml
+++ b/src/main/resources/br/edu/poo/gui/removerLocacao.fxml
@@ -7,17 +7,17 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.poo.gui.ControladorVeiculo">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.poo.gui.ControladorLocacao">
    <children>
       <AnchorPane prefHeight="150.0" prefWidth="300.0">
          <children>
-            <TextField fx:id="placa_gui" layoutX="14.0" layoutY="50.0" />
-            <Label layoutX="15.0" layoutY="28.0" text="DIGITE A PLACA DO VEÍCULO:">
+            <TextField fx:id="codLocacao_gui" layoutX="14.0" layoutY="50.0" />
+            <Label layoutX="15.0" layoutY="28.0" text="DIGITE O CÓDIGO DA LOCAÇÃO:">
                <font>
                   <Font size="13.0" />
                </font>
             </Label>
-            <Button fx:id="btn_pesquisar" layoutX="199.0" layoutY="96.0" mnemonicParsing="false" onAction="#pesquisarInfoVeiculo" text="Pesquisar" />
+            <Button layoutX="199.0" layoutY="96.0" mnemonicParsing="false" onAction="#removerLocacao" text="Pesquisar" />
             <Button fx:id="btn_cancelar" layoutX="47.0" layoutY="96.0" mnemonicParsing="false" onAction="#fecharJanela" text="Cancelar" />
          </children>
       </AnchorPane>
