--- a/src/main/resources/br/edu/poo/gui/removerVeiculo.fxml
+++ b/src/main/resources/br/edu/poo/gui/removerVeiculo.fxml
@@ -17,7 +17,7 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <Button fx:id="btn_pesquisar" layoutX="199.0" layoutY="96.0" mnemonicParsing="false" onAction="#pesquisarInfoVeiculo" text="Pesquisar" />
+            <Button fx:id="btn_pesquisar" layoutX="199.0" layoutY="96.0" mnemonicParsing="false" onAction="#removeVeiculo" text="Pesquisar" />
             <Button fx:id="btn_cancelar" layoutX="47.0" layoutY="96.0" mnemonicParsing="false" onAction="#fecharJanela" text="Cancelar" />
          </children>
       </AnchorPane>
